; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/qmgr/extr_job.c_test_ResumeEmpty.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/qmgr/extr_job.c_test_ResumeEmpty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@test_job = common dso_local global i32 0, align 4
@BG_E_EMPTY = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [50 x i8] c"Resume failed to return BG_E_EMPTY error: 0x%08x\0A\00", align 1
@BG_JOB_STATE_ERROR = common dso_local global i64 0, align 8
@S_OK = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [12 x i8] c"got 0x%08x\0A\00", align 1
@BG_JOB_STATE_SUSPENDED = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [25 x i8] c"Incorrect job state: %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_ResumeEmpty to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_ResumeEmpty() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i64, align 8
  %3 = load i32, i32* @test_job, align 4
  %4 = call i64 @IBackgroundCopyJob_Resume(i32 %3)
  store i64 %4, i64* %1, align 8
  %5 = load i64, i64* %1, align 8
  %6 = load i64, i64* @BG_E_EMPTY, align 8
  %7 = icmp eq i64 %5, %6
  %8 = zext i1 %7 to i32
  %9 = load i64, i64* %1, align 8
  %10 = call i32 @ok(i32 %8, i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str, i64 0, i64 0), i64 %9)
  %11 = load i64, i64* @BG_JOB_STATE_ERROR, align 8
  store i64 %11, i64* %2, align 8
  %12 = load i32, i32* @test_job, align 4
  %13 = call i64 @IBackgroundCopyJob_GetState(i32 %12, i64* %2)
  store i64 %13, i64* %1, align 8
  %14 = load i64, i64* %1, align 8
  %15 = load i64, i64* @S_OK, align 8
  %16 = icmp eq i64 %14, %15
  %17 = zext i1 %16 to i32
  %18 = load i64, i64* %1, align 8
  %19 = call i32 @ok(i32 %17, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i64 %18)
  %20 = load i64, i64* %2, align 8
  %21 = load i64, i64* @BG_JOB_STATE_SUSPENDED, align 8
  %22 = icmp eq i64 %20, %21
  %23 = zext i1 %22 to i32
  %24 = load i64, i64* %2, align 8
  %25 = call i32 @ok(i32 %23, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.2, i64 0, i64 0), i64 %24)
  ret void
}

declare dso_local i64 @IBackgroundCopyJob_Resume(i32) #1

declare dso_local i32 @ok(i32, i8*, i64) #1

declare dso_local i64 @IBackgroundCopyJob_GetState(i32, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
